backoffice(ui): correctly align elements in table * ref: https://github.com/cern-sis/issues-inspire/issues/1500

--- a/ui/src/backoffice/common/components/ResultItem/ResultItem.less
+++ b/ui/src/backoffice/common/components/ResultItem/ResultItem.less
@@ -35,10 +35,6 @@
     gap: 0.75rem;
   }
 
-  .workflow-selection-checkbox {
-    margin-top: 5px;
-  }
-
   .col-details-2 {
     width: 45%;
     line-break: anywhere;
